# rico-term

./: .env.example  .gitignore  START_BACKEND_NOW.bat  demo_adaptive_ai.py  demo_hybrid_ai.py  demo_snowflake.py  drop_and_recreate_tables.py  generate_unified_report.py  judge_demo.py  load_env.bat  load_env.sh  open_report.bat  pyproject.toml  render.yaml  report.html  report.json  requirements.txt  rico.sarif  rico.yaml.example  setup_snowflake.py  start_local.bat  start_local.sh  test_agentic_ai.py  test_cicd_integration.py  test_demo_scan.py  test_reporting.py  verify_snowflake_data.py
.github/workflows/: rico-scan-production.yml.example  rico-scan.yml  rico-security-scan.yml
demo-api/: .gitignore  demo.yaml  invalid.yaml  login.yaml  openapi.json  openapi.yaml  requirements.txt  start.bash  start.bat  start.sh
demo-api/app/: config.py  database.py  main.py  models.py  security.py  utils.py
demo-api/data/: config.json  etc_passwd.txt  public.txt  secret.txt
frontend/: .env.example  test-build.bat  test-integration.bat  test-integration.sh  update-lockfile.bat
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: animated-terminal.tsx  footer.tsx  header.tsx  real-scanner.tsx  report-display.tsx  (+3 more)
reports/: agentic_analysis.json  preview_new_design.html  report.html  report.json
rico/: audit.py  cli.py  config.py  docs.py
test_reports/: complete_report.html  complete_report.json  integration_test.sarif  test_report.json  test_rico.sarif
tests/: test_ai_agent.py  test_detector.py  test_openapi_parser.py  test_report_score.py
(+63 files in other folders)
